--- a/style.css
+++ b/style.css
@@ -28,17 +28,17 @@ body{
 
 .hamburger-menu {
   z-index: 1001;
-  width: 3%;
+  width: 5%;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 30%;
+  height: 50%;
   margin: 10px 10px 10px 25px;
 }
 
 .hamburger-menu .bar {
-  height: 6px;
+  height: 7px;
   width: 100%;
   background-color: black;
   border-radius: 5px;
@@ -48,7 +48,7 @@ body{
   /* border: 2px solid red; */
   display: none;
   z-index: 1000;
-  width: 25%;
+  width: 40%;
   max-height: 85%;
   border: .5vh outset rgb(227, 191, 127);;
   background-color: #000000dd;
@@ -61,6 +61,10 @@ body{
 .menu-sections{
   cursor: pointer;
   margin: 10% 5%;
+  padding: 3%;
+  font-size: 3vh;
+  background-color: rgba(54, 45, 31, 0.809);
+  border-radius: 20px;
 }
 
 #scrollContainer{
@@ -77,6 +81,18 @@ body{
   font-size: 4vh;
   list-style: none;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#mainContainer, #scrollContainer::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#mainContainer, #scrollContainer {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 
 
 #alphabetNav {
@@ -579,7 +595,52 @@ button{
     background-image: url("./images/japan.png");
     background-size: 199% 115%;
     display: block;
-  }  
+  }
+
+  .hamburger-menu {
+    z-index: 1001;
+    width: 8%;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 40%;
+    margin: 10px 10px 10px 25px;
+  }
+  
+  .hamburger-menu .bar {
+    height: 7px;
+    width: 100%;
+    background-color: black;
+    border-radius: 5px;
+  }
+  
+  #menu{
+    /* border: 2px solid red; */
+    display: none;
+    z-index: 1000;
+    width: 80%;
+    max-height: 85%;
+    border: .5vh outset rgb(227, 191, 127);;
+    background-color: #000000dd;
+    position: absolute;
+    top: 10vh;
+    left: 1.25vw;
+    padding: 4vh 2vh;
+  }
+
+  .drink-list{
+    font-size: 2.5vh;
+  }
+  
+  .menu-sections{
+    cursor: pointer;
+    margin: 10% 5%;
+    padding: 3%;
+    font-size: 3vh;
+    background-color: rgba(54, 45, 31, 0.809);
+    border-radius: 20px;
+  }
 
   #drinkRecipeDiv{
     width: 96%;
