--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 
 .menu-sections{
   cursor: pointer;
-  margin: 10% 5%;
+  margin: 7% 5%;
   padding: 3%;
   font-size: 3vh;
   background-color: rgba(54, 45, 31, 0.809);
@@ -202,11 +202,12 @@ button{
 }
 
 #mainContainer{
-  border: .5vh outset rgb(227, 191, 127);
+  border-top: .5vh outset rgb(227, 191, 127);
+  border-bottom: .5vh outset rgb(227, 191, 127);
   background-color: #0000006e;
   box-shadow: 0 0 15px #313131;
-  width: 95%;
-  height: 74%;
+  width: 100%;
+  height: 75%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -276,7 +277,7 @@ button{
   background-color: #0000006e;
   text-shadow: 0 0 15px #000000;
   width: 98%;
-  height: 10vh;
+  height: 8vh;
   padding: 0 2%;
   text-align: center;
   font-size: 3vh;
@@ -298,20 +299,20 @@ button{
 
 .info-divs{
   /* border: 1px solid red; */
-  box-shadow: 0 0 20px #313131;
-  border: .25vh outset rgb(227, 191, 127);
-  margin: .5%;
+  /* box-shadow: 0 0 20px #313131; */
+  /* border: .25vh outset rgb(227, 191, 127); */
+  /* margin: .5%; */
   width: 23%;
-  height: 98%;
+  height: 100%;
 }
 
 #drinkPhoto{
-  box-shadow: 0 0 15px #313131;
+  /* box-shadow: 0 0 15px #313131; */
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #0000006e;
+  /* background-color: #0000006e; */
 }
 
 .drink-photo{
@@ -324,7 +325,10 @@ button{
 
 #drinkRecipeDiv{
   /* border: 3px solid pink; */
-  width: 43%;
+  border-left: .25vh outset rgb(227, 191, 127);
+  border-right: .25vh outset rgb(227, 191, 127);
+  width: 45%;
+  height: 100%;
   font-size: 2.5vh;
   display: flex;
   text-align: center;
@@ -383,7 +387,7 @@ button{
   flex-wrap: wrap;
   justify-content: center;
   overflow: auto;
-  width: 28%;
+  width: 30%;
 }
 
 #drinkInstructionsTitle{
